...

  object Components {

    const val PERSISTENT_SCAFFOLD = "Persistent Scaffold"
    const val MEDIA_LIST_CONTENT = "Media List Content"
    const val MEDIA_GRID_CONTENT = "Media Grid Content - Mode %s"
    const val SCROLLABLE_CONTENT = "Scrollable Content"
    const val PULL_TO_REFRESH = "Pull to refresh"
    const val POSTER_IMAGE = "Poster image"

    object Fab {
      const val DISCOVER = "Discover Floating Action Button"
    }
...
  object Dialogs {
    const val TWO_BUTTON_DIALOG = "Two Button Dialog"
    const val ALERT_DIALOG = "Dialogs Alert Dialog"
    const val CONFIRM_BUTTON = "Dialog Confirm Button"
    const val DISMISS_BUTTON = "Dialog Dismiss Button"
    const val SHARE_ERROR_BUTTON = "Share Error Button"
    const val DELETE_REQUEST = "Delete Request Dialog"
    const val REMOVE_ITEMS_FROM_LIST = "Remove Items From List"

    const val TOGGLE_ALL_SEASONS_SWITCH = "Season Toggle All Switch"
    const val SEASON_SWITCH = "Season Switch %s"
    const val SEASON_ROW = "Season Row %s"
  }

  object Modal {
    const val REQUEST_MOVIE = "Request Movie Modal"
    const val REQUEST_SEASONS = "Select Seasons Modal"
    const val ACTION_MENU = "Action Menu Modal"
    const val BOTTOM_SHEET = "Modal Bottom Sheet"

    const val DELETE_BUTTON = "Delete button for id %s"
  }

  object Request {
    const val LOADING_DROPDOWN_MENU = "Loading DropDown Menu %s"
...
