<resources>
  <string name="close">Close</string>
  <string name="save">Save</string>
  <string name="update">Update</string>

  <!-- Error -->
  <string name="empty_field_error_message">%1$s is required.</string>
  <string name="general_error_message">Something when wrong.</string>

...
